--- a/chatbot/templates/base.html
+++ b/chatbot/templates/base.html
@@ -61,6 +61,7 @@
 	<title>챗봇</title>
 
 	<meta charset="utf-8" />
+	<link href="../static/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
