--- a/app/templates/ranking.html
+++ b/app/templates/ranking.html
@@ -59,6 +59,7 @@
 
 <head>
   <title>현재 순위</title>
+  <link href="../static/img/core-img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
