--- a/app/templates/test_result.html
+++ b/app/templates/test_result.html
@@ -73,7 +73,7 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Favicon -->
-    <link rel="icon" href="../static/img/core-img/favicon.ico">
+    <link href="../static/img/core-img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 
     <!-- Core Stylesheet -->
     <link href="../static/css/style2.css" rel="stylesheet">
