--- a/app/templates/voca_test.html
+++ b/app/templates/voca_test.html
@@ -61,8 +61,9 @@
 <html>
 
 <head>
-	<title>머핀의 법칙 - AI 기반 영어 교육</title>
+	<title>단어 테스트</title>
 	<meta charset="utf-8" />
+	<link href="../static/img/core-img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
 		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
