--- a/todo/templates/todo/create.html
+++ b/todo/templates/todo/create.html
@@ -2,6 +2,7 @@
 {% block head %}
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/resources/demos/style.css">
+<link href="../static/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script>
