--- a/todo/templates/todo/todolist_list.html
+++ b/todo/templates/todo/todolist_list.html
@@ -60,6 +60,7 @@
 <head>
   <title>투두 리스트</title>
   <meta charset="utf-8" />
+  <link href="../static/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
