--- a/app/templates/a.html
+++ b/app/templates/a.html
@@ -213,7 +213,7 @@
                 </div>
                 <div class="box person">
                     <div class="image round">
-                        <img src="" alt="Person 2" />
+                        <img src="{% static 'img/faceee.jpg' %}" alt="Person 2" />
                     </div>
                     <h3>전상현</h3>
                     <p>21411895 <br>조원</p>
