--- a/app/templates/pronounce.html
+++ b/app/templates/pronounce.html
@@ -1,45 +1,162 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>발음 연습</title>
-    <link href="../static/css/record.css?after" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <div class="wrapper">
 
-      <header>
-        <h1>발음 연습</h1>
-      </header>
+<style>
+  @font-face {
+    font-family: 'ghanachoco';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@1.0/ghanachoco.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-      <section class="main-controls">
-        <canvas class="visualizer" height="60px"></canvas>
-        <div id="buttons">
-          <button class="record">Record</button>
-          <button class="stop">Stop</button>
-        </div>
-      </section>
+  @font-face {
+    font-family: 'Handon3gyeopsal600g';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_seven@1.2/Handon3gyeopsal600g.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-      <section class="sound-clips">
+  .ghanachoco-font {
+    font-family: 'ghanachoco', sans-serif;
+    color: black;
+  }
+
+  .Handon3gyeopsal600g-font {
+    font-family: 'Handon3gyeopsal600g', sans-serif;
+    color: black;
+  }
+
+  .half-highlight {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 50%, #FFD0AE 50%);
+  }
+
+  .spread-underline {
+    color: #333;
+    text-decoration: none;
+    display: inline-block;
+    padding: 15px 0;
+    position: relative;
+  }
+
+  .spread-underline:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #ffb000;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+
+  .spread-underline:hover:after {
+    width: 100%;
+    left: 0;
+  }
+</style>
+
+<head>
+  <title>머핀의 법칙 - AI 기반 영어 교육</title>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+
+  <link href="../static/css/record.css?after" rel="stylesheet" type="text/css">
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+  <div class="fixed-top Handon3gyeopsal600g-font">
+		<div class="collapse" id="navbarToggleExternalContent">
+			<div class="bg-dark p-4" style="color: white;">
+				{%if user.is_authenticated%}
+				<h5 class="text-white h3">{{user.profile.nickname}}님 반갑습니다!</h5>
+				<span class="text-muted">
+					<form>ㅤ
+						<a href="{%url 'user_profile'%}" style="color: white;">내정보 </a>
+						<a href="{%url 'ranking'%}" style="color: white;">ㅤㅤ현재 순위ㅤ</a>
+						{%csrf_token%}
+						<form action="{%url 'logout'%}" method="POST">
+							<input type="submit" value="로그아웃" style="font-size: 0.8rem;">
+						</form>
+						{%else%}
+						<a href="{%url 'signup'%}">회원가입</a>
+						<a href="{%url 'login'%}">로그인</a>
+						{%endif%}
+					</form>
+				</span>
+			</div>
+		</div>
+		<nav class="navbar navbar-dark bg-light">
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<a class="nav-link spread-underline" href="{%url 'voca_cate'%}"
+				style="color:black; font-size:1.1rem;">단어장</a>
+			<a class="nav-link spread-underline" href="{%url 'voca_test'%}"
+				style="color:black; font-size:1.1rem;">단어테스트</a>
+			<a class="nav-link spread-underline" href="{%url 'listen'%}" style="color:black; font-size:1.1rem;">영어듣기</a>
+			<a class="nav-link spread-underline" href="{%url 'pronounce'%}"
+				style="color:black; font-size:1.1rem;">발음연습</a>
+			<a class="nav-link spread-underline" href="{%url 'chatbot'%}" style="color:black; font-size:1.1rem;">챗봇</a>
+			<a class="nav-link spread-underline" href="{%url 'write'%}" style="color:black; font-size:1.1rem;">손글씨
+				쓰기</a>
+			<a class="nav-link spread-underline" href="{%url 'todo:todolist'%}"
+				style="color:black; font-size:1.1rem;">투두리스트</a>
+		</nav>
+	</div>
 
 
-      </section>
+  <div class="wrapper">
 
-    </div>
+    <header>
+      <h1>발음 연습</h1>
+    </header>
 
-    <label for="toggle">❔</label>
-    <input type="checkbox" id="toggle">
-    <aside>
-      <h2>Information</h2>
+    <section class="main-controls">
+      <canvas class="visualizer" height="60px"></canvas>
+      <div id="buttons">
+        <button class="record">Record</button>
+        <button class="stop">Stop</button>
+      </div>
+    </section>
 
-      <p>Web dictaphone is built using <a href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator.getUserMedia">getUserMedia</a> and the <a href="https://developer.mozilla.org/en-US/docs/Web/API/MediaRecorder_API">MediaRecorder API</a>, which provides an easier way to capture Media streams.</p>
+    <section class="sound-clips">
 
-      <p>Icon courtesy of <a href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to <a href="http://soledadpenades.com/">Sole</a> for the Oscilloscope code!</p>
-    </aside>
-    {% csrf_token %}
-    <script>const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;</script>
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="../static/js/record.js?after"></script>
-  </body>
+
+    </section>
+
+  </div>
+
+  <label for="toggle">❔</label>
+  <input type="checkbox" id="toggle">
+  <aside>
+    <h2>Information</h2>
+
+    <p>Web dictaphone is built using <a
+        href="https://developer.mozilla.org/en-US/docs/Web/API/Navigator.getUserMedia">getUserMedia</a> and the <a
+        href="https://developer.mozilla.org/en-US/docs/Web/API/MediaRecorder_API">MediaRecorder API</a>, which provides
+      an easier way to capture Media streams.</p>
+
+    <p>Icon courtesy of <a href="http://findicons.com/search/microphone">Find Icons</a>. Thanks to <a
+        href="http://soledadpenades.com/">Sole</a> for the Oscilloscope code!</p>
+  </aside>
+  {% csrf_token %}
+  <script>const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;</script>
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="../static/js/record.js?after"></script>
+</body>
+
 </html>
