--- a/app/templates/pronounce.html
+++ b/app/templates/pronounce.html
@@ -169,6 +169,7 @@
   <script>const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;</script>
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="../static/js/record.js?after"></script>
+  <script src="../static/js/RecordRTC.js"></script>
 
   <footer id="footer">
     <div class="inner">
